--- a/client/src/scss/partials/_crosshair.scss
+++ b/client/src/scss/partials/_crosshair.scss
@@ -7,7 +7,6 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    z-index: 15;
     @include vertical-align();
     left: 0;
     right: 0;
