--- a/client/src/scss/partials/_modal.scss
+++ b/client/src/scss/partials/_modal.scss
@@ -17,13 +17,10 @@
         text-align: center;
     }
     &--background {
-        background-color: rgba($color: darkslategray, $alpha: 0.85);
+        background-color: rgba($color: black, $alpha: 0.1);
         position: fixed;
-        top: 0;
-        left: 0;
         height: 100vh;
         width: 100vw;
-        z-index: 900;
         padding: 10px;
     }
     &--close {
